<resources>
    <string name="app_name">Automatic Checklist</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="inbox">Inbox</string>
    <string name="category">Category</string>
    <string name="user">User</string>
    <string name="padding">20dp</string>
    <string name="user_name">USER_NAME</string>
    <string name="user_labels">USER_LABELS</string>
    <string name="logout">logout</string>
    <string name="edit">edit</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="your_name">Your name</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="done">Done</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="xx_years_old">XX years old</string>
    <string name="your_age">Your age</string>
    <string name="app_is_loading">App is loading...</string>
    <string name="welcome">Welcome</string>
    <string name="content">Content</string>
    <string name="recurring">Recurring</string>
    <string name="due_date">Due Date:</string>
    <string name="_01_01_2022">01/01/2022</string>
    <string name="choose_recurring_frequency">Recurring Frequency</string>
    <string name="location">Location</string>
    <string name="choose_label_s">Choose Label(s)</string>
    <string name="create_a_new_label">Create a new label</string>
    <string name="save">SAVE</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="this_is_the_content">This is the content</string>
    <string name="d_r">D/R</string>
    <string name="loc">LOC</string>
    <string name="lab">LAB</string>
    <string name="selection">SELECTION</string>
    <string name="undo">undo</string>
    <string name="delete_checked_items">Delete Checked Items</string>
    <string name="cancel">cancel</string>
    <string name="dec_sign">-</string>
    <string name="Uno">1</string>
    <string name="inc_sign">+</string>
    <string name="missing_due_date_instr">Missing due date for this event</string>
    <string name="this_entry_has_been_instr">This entry has been removed</string>
    <string name="label_has_been_removed_instr">Label [%s] has been removed</string>
    <string name="are_you_sure_1_instr">Are you sure to remove 1 entry permanently?</string>
    <string name="are_you_sure_multi_instr">Are you sure to remove %d entries permanently?</string>
    <string name="warning">Warning</string>
</resources>