<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserEditFragment">

    <TextView
        android:id="@+id/user_edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/edit_your_profile" />

    <EditText
        android:id="@+id/user_edit_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_edit_title"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:hint="@string/your_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/user_edit_age_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_edit_name_edit_text"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:hint="@string/your_age"
        android:inputType="number"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/user_edit_upload_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_edit_age_edit_text"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"
        android:text="@string/upload_photo" />

    <Button
        android:id="@+id/user_edit_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_edit_age_edit_text"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:text="@string/done" />

</RelativeLayout>

