<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_inbox">

    <fragment
        android:id="@+id/navigation_inbox"
        android:name="edu.rosehulman.automaticchecklist.ui.InboxFragment"
        android:label="@string/inbox"
        tools:layout="@layout/fragment_inbox" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="edu.rosehulman.automaticchecklist.ui.dashboard.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="edu.rosehulman.automaticchecklist.ui.notifications.UserFragment"
        android:label="@string/user"
        tools:layout="@layout/fragment_user" />
</navigation>