<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">

        <EditText
            android:id="@+id/entry_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/entry_edit_warning_1"
            android:hint="@string/content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/entry_edit_warning_1"
            style="@style/warningText" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">

        <ImageView
            android:id="@+id/entry_edit_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_check_box_outline_blank_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/entry_edit_checkbox"
            android:text="@string/recurring"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/entry_edit_choose_date"
            android:text="@string/due_date"
            android:textSize="20sp" />


        <ImageView
            android:id="@+id/entry_edit_calendar_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"

            android:src="@drawable/ic_baseline_calendar_month_24" />

        <EditText
            android:id="@+id/entry_edit_choose_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/entry_edit_calendar_icon"
            android:hint="@string/_01_01_2022"
            android:importantForAutofill="no"
            android:textSize="20sp" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/entry_edit_frequency"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/entry_edit_frequency_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/choose_recurring_frequency"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">

        <ImageView
            android:id="@+id/entry_edit_location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_location_on_24" />

        <EditText
            android:id="@+id/entry_edit_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/entry_edit_location_icon"
            android:hint="@string/location"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/entry_edit_labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:hint="@string/choose_label_s"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/entry_edit_label_selections_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp">

        <RelativeLayout
            android:id="@+id/entry_edit_label_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/entry_edit_label_new_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/entry_edit_label_confirm_button"
                android:hint="@string/create_a_new_label"
                android:importantForAutofill="no"
                android:inputType="text" />

            <Button
                android:id="@+id/entry_edit_label_confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/create" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/entry_edit_label_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/entry_edit_label_create" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">

        <Button
            android:id="@+id/entry_edit_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/save" />

    </RelativeLayout>
</LinearLayout>